--- a/src/app/_styles/tailwind.css
+++ b/src/app/_styles/tailwind.css
@@ -72,6 +72,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    background-color: var(--black);
   }
   p {
     margin: 0;
