--- a/src/app/_styles/tailwind.css
+++ b/src/app/_styles/tailwind.css
@@ -48,11 +48,12 @@
     --h1: 32px;
     --h2: 24px;
     --h3: 20px;
-    --h4: 18px;
+    --h4: 16px;
 
     --text-lg: 24px;
-    --text-md: 14px;
-    --text-sm: 16px;
+    --text-md: 24px;
+    --text-sm: 14px;
+    --text-xs: 12px;
   }
 
   @media all and (min-width: 501px) and (max-width: 1024px) {
@@ -60,6 +61,11 @@
     --h2: 40px;
     --h3: 26px;
     --h4: 20px;
+
+    --text-lg: 24px;
+    --text-md: 24px;
+    --text-sm: 14px;
+    --text-xs: 12px;
   }
 }
 
