sec5 텍스트영역 살짝 끌올

--- a/src/app/_styles/main.module.scss
+++ b/src/app/_styles/main.module.scss
@@ -456,6 +456,7 @@
     @extend %flex-col-center-align;
     text-align: center;
     transition: var(--transition);
+    margin-top: -3%;
 
     h1 {
       @extend %triangle-title;
@@ -936,10 +937,6 @@
       width: 276px;
       height: 235px;
     }
-  }
-
-  .custom-cursor {
-    display: none;
   }
 
   .header {
